@@ -58,15 +58,15 @@ Fscore <- as.numeric(Hauser79$Father)
 
 # row effects model
 hauser.roweff <- update(hauser.indep, ~ . + Father*Sscore)
-summarize(hauser.roweff)
+summarise(hauser.roweff)
 
 # uniform association
 hauser.UA <- update(hauser.indep, ~ . + Fscore*Sscore)
-summarize(hauser.UA)
+summarise(hauser.UA)
 
 # uniform association, omitting diagonals
 hauser.UAdiag <- update(hauser.indep, ~ . + Fscore*Sscore + Diag(Father,Son))
-summarize(hauser.UAdiag)
+summarise(hauser.UAdiag)
 
 # Levels for Hauser 5-level model
 levels <- matrix(c(
@@ -82,24 +82,24 @@ mosaic(hauser.topo, ~Father+Son, main="Topological model", gp=shading_Friendly)
 
 hauser.RC <- update(hauser.indep, ~ . + Mult(Son,Father))
 mosaic(hauser.RC, ~Father+Son, main="RC model", gp=shading_Friendly)
-summarize(hauser.RC)
+summarise(hauser.RC)
 
 # crossings models 
 hauser.CR <- update(hauser.indep, ~ . + Crossings(Father,Son))
 mosaic(hauser.topo, ~Father+Son, main="Crossings model", gp=shading_Friendly)
-summarize(hauser.CR)
+summarise(hauser.CR)
 
 hauser.CRdiag <- update(hauser.indep, ~ . + Crossings(Father,Son) + Diag(Father,Son))
-summarize(hauser.CRdiag)
+summarise(hauser.CRdiag)
 
 
 # compare model fit statistics
 modlist <- glmlist(hauser.indep, hauser.roweff, hauser.UA, hauser.UAdiag, hauser.quasi, hauser.qsymm,  
      hauser.topo, hauser.RC, hauser.CR, hauser.CRdiag)
-sumry <- summarize(modlist)
+sumry <- summarise(modlist)
 sumry[order(sumry$AIC, decreasing=TRUE),]
 # or, more simply
-summarize(modlist, sortby="AIC")
+summarise(modlist, sortby="AIC")
 
 op <- par(xpd=TRUE)
 # mods <- gsub('hauser\\.', '', rownames(sumry))
